Leader fixes and bugfixing

--- a/localisation/english/PB_country_specific/PB_Russia_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Russia_l_english.yml
@@ -508,6 +508,13 @@
   Russian_Politics.46.d:0 ""
   Russian_Politics.46.a:0 "The results are in..."
 
+  Russian_Politics.47.t:0 "Some Adjustments to the Winter Palace"
+  Russian_Politics.47.d:0 ""
+  Russian_Politics.47.a:0 "Grand Duke George will be crowned as the New Tsar"
+  Russian_Politics.47.b:0 "Grand Duke Nicholas will be crowned as Tsar"
+  Russian_Politics.47.c:0 "Grand Duke Andrei will become Tsar!"
+  Russian_Politics.47.e:0 "We're satisfied with the current Tsar"
+
   Russian_Assassination_Attempt.1.t:0 "Redemption Day"
   Russian_Assassination_Attempt.1.d:0 "It was hard to hear a portable radio over the sound of the crowd; an instrumental jazz tune hummed in one ear. She paid close attention to the notes, the warbling of the bass section, the trumpets blaring. As it all slowed to a close, an announcer with a thick Polish accent chimed in. It wasn’t the typical announcer, who at the moment was tied up in a broom closet.\n\n“Good morning, listeners. The time is eight AM. For those attending the parade this morning, the weather service has advised carrying a parasol due to the chance of rain. Don’t touch that dial now listeners, we’re just getting started with today’s catalogue-“\n\nKasandra flicked the radio off and dug her hands into her coat pockets, one hand withdrawing an old half burnt photograph. Two dirty looking children and their mother on a farm, smiling in squalor, faces distorted by melted film. The mother’s face was all but obscured by the charring; Kasandra couldn’t remember what she looked like.\n\nIn a few moments she was near the head of the crowd. The Tsar was off the podium, all smiles and shaking hands. A few nervous looking security agents orbited around him and shooed off the odd heckler. She made her way through the throng of people slowly, casually, pretending to try and get a better look. After a moment, she was within ten feet, the perfect distance.\n\nAs the Tsar made his way past, she casually slipped her hand into her pocket once more and withdrew a pistol. Seconds felt like hours now, adrenaline saturating as the sights leveled. One of the officers spotted her, sprinting towards the Tsar. Michael only had the briefest moment to glance at the commotion, eyes meeting the barrel of a gun. It was as if time stopped at that exact instant; an emperor faced with a peasant’s pistol. There wasn’t time to duck, all Michael could do was watch dumbfounded.\n\nOne barely audible prayer escaped the woman’s lips before she pulled the trigger.\n\n"God, please.""
   Russian_Assassination_Attempt.1.a:0 "The bullet strikes the Tsar!"
