focus filter and matsynth tech icons

--- a/localisation/english/PB_focus_filters_l_english.yml
+++ b/localisation/english/PB_focus_filters_l_english.yml
@@ -20,3 +20,4 @@
  FOCUS_FILTER_FACTIONALISM: "Factionalism"
  FOCUS_FILTER_NATIONALISM: "Nationalistic Fervour"
  FOCUS_FILTER_UNEMPLOYMENT: "Unemployment"
+ FOCUS_FILTER_VOLKSSTATEN: "Volksstaten"
