--- a/localisation/english/PB_country_specific/PB_France_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_France_l_english.yml
@@ -2027,6 +2027,8 @@
 
   FRA_available_tech_team:0 "Available §YTech Team§!:\n"
 
+  PB_prague_conference_disabled: "§YPrague Conference§! will be available in the next Update"
+
   PB_FRA_unemployment_variable_minus0.05_tt:0 "Unemployment: §G-0.05%§!."
   PB_FRA_unemployment_variable_minus0.1_tt:0 "Unemployment: §G-0.1%§!."
   PB_FRA_unemployment_variable_minus0.25_tt:0 "Unemployment: §G-0.25%§!."
