--- a/localisation/english/replace/PB_replace_l_english.yml
+++ b/localisation/english/replace/PB_replace_l_english.yml
@@ -94,8 +94,8 @@
   FE_SELECT_SCENARIO: "SELECT A REGION"
 
   FE_PB_VERSION: "Patch - 1.3"
-  FE_PB_NEW_CONTENT: "New Content:\n - Russian Focus Tree\n - Prussian Focus Tree\n - Franco-Russian War\n - Map Changes\n - DLC  compatibility\n - AI Improvements\n - American Focus Tree Improvements\n - China Overhaul\n - Doctrines Rework"
-  FE_PB_NEXT_UPDATE: "The Next Update (Balkans) will feature content for Greece, a peace deal rework (KR Style) and general map overhaul"
+  FE_PB_NEW_CONTENT: "New Content:\n - Russian Focus Tree\n - Prussian Focus Tree\n - DLC  compatibility\n - AI Improvements\n - American Focus Tree Improvements\n - China Overhaul\n - Doctrines Rework"
+  FE_PB_NEXT_UPDATE: "The Next Update will feature §YPeace Deals Rework§!, §YMegacorporations§! Expanded Mechanic, additions and upgrades to the existing mechanics and §YMap Expansion and Overhaul§!"
 
   POLL: "Next Pax Patch/Update Poll - Community Input"
   DISCORD: "Pax Britannica Discord"
