Fixes, Triggers, Effects (RUS)

--- a/localisation/english/PB_country_specific/PB_Russia_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Russia_l_english.yml
@@ -1827,6 +1827,8 @@
 
   RUS_AZO_Global_Orbit_Wars_Active_tt:0 "The §YOrbit Wars§! are currently ongoing.\n\n"
 
+  RUS_ALASKA_NEEDS_TO_BE_LOYAL:0 "§YAlaska§! is §GLoyal§!"
+
   RUS_AZO_Project_Solaris_Rewards_tt:0 "Upon completion, we will gain an additional §C50§!£research_points_small Monthly Research Points and a lump reward of §C200§!£research_points_small Research Points."
   PB_RUS_Project_Zona_Rewards_tt:0 "Upon completion, §GAgroponics Complexes§! will produce an additional ten §YGrain§! and two §YRubber§!"
   PB_RUS_Project_Commonality_Rewards_tt:0 "Upon completion, the §CCommonality Consensus§! thesis is proven feasible, allowing access to focuses related to §CCommonality§! implementation."
