--- a/localisation/english/terrain_l_english.yml
+++ b/localisation/english/terrain_l_english.yml
@@ -33,6 +33,8 @@
  water_deep_ocean_desc:0 ""
  water_arctic:0 "Arctic Waters"
  water_arctic_desc:0 ""
+ water_antarctic_sea:0 "Antarctic Waters"
+ water_antarctic_sea_desc:0 ""
  UNIT_TERRAIN_MODIFIER:0 "Unit effects:"
  MOVEMENT_COST:0 "Movement cost within this terrain type x$VALUE|H$"
  TERRAIN_COMBAT_WIDTH_COMB:0 "Combat width: $VALUE|0Y$ (Additional attacks: $ADD|0Y$)"
