--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -81,7 +81,7 @@
  VICTORY_POINTS_6558:0 "Poznań"
  VICTORY_POINTS_9508:0 "Lodz"
  VICTORY_POINTS_11479:0 "Lwow"
- VICTORY_POINTS_11666:0 "Vienna"
+ VICTORY_POINTS_11666:0 "Wien"
  VICTORY_POINTS_673:0 "Innsbruck"
  VICTORY_POINTS_688:0 "Salzburg"
  VICTORY_POINTS_9648:0 "Graz"
@@ -1502,3 +1502,4 @@
  VICTORY_POINTS_3885:0 "Perugia"
  VICTORY_POINTS_883:0 "Foggia"
  VICTORY_POINTS_13316:0 "Santa Anna"
+ VICTORY_POINTS_6325:0 "Süd-Hamburg"
