--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -1181,6 +1181,10 @@
   PBNews.303.d:0 "The degradation of the lands on the South American Continent has reached apocalyptic levels. Sand and Dust Storms have become more violent and destructive as the effects of the Green Sahara project continue to negatively influence the climate of the South American region. Scientists do not believe that this process can be stopped anymore and politicians encourage more people to settle into the Amazonian interior for better livelihoods.\n\nThis year the storms have become especially devastating in Brazil lasting for more than five weeks in some areas."
   PBNews.303.a:0 "The Cursed Continent"
 
+  PBNews.304.t:0 "PRUSSIAN JUNKERS TAKE POWER"
+  PBNews.304.d:0 "The Fatherland Front in Prussia has fallen.\n\nLarge garrisons and former veterans have put their full support behind Prussia's political Junker Elements. The Junkers promise the full restoration of the King Friedrich Heinrich Albert and restoration of democracy in the country.\n\nHowever several Fatherland groups still remain loyal to Bouhler. Terrorism has become rampant across Prussia. It will likely take years to get rid of his legacy."
+  PBNews.304.a:0 "The Hydra Falls"
+
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
   stockcrisis.1.a:0 "Oh dear"
