new terrain types test push

--- a/localisation/english/terrain_l_english.yml
+++ b/localisation/english/terrain_l_english.yml
@@ -6,23 +6,43 @@
  lakes:0 "Lake"
  lakes_desc:0 ""
  forest:0 "Forest"
- forest_desc:0 ""
+ forest_desc:0 "Test"
+ forest_hills:0 "Forested Hills"
+ forest_hills_desc:0 ""
+ montane_forest:0 "Montane Forest"
+ montane_forest_desc:0 ""
  hills:0 "Hills"
  hills_desc:0 ""
  mountain:0 "Mountain"
  mountain_desc:0 ""
+ valley:0 "Valley"
+ valley_desc:0 ""
  plains:0 "Plains"
  plains_desc:0 ""
+ farmlands:0 "Farmlands"
+ farmlands_desc:0 ""
+ steppe:0 "Steppes"
+ steppe_desc:0 ""
+ savanna:0 "Wooded Grasslands"
+ savanna_desc:0 ""
  urban:0 "Urban"
  urban_desc:0 ""
  dense_urban:0 "Dense Urban"
  dense_urban_desc:0 ""
  jungle:0 "Jungle"
  jungle_desc:0 ""
+ jungle_hills:0 "Jungle Hills"
+ jungle_hills_desc:0 ""
  marsh:0 "Marsh"
  marsh_desc:0 ""
+ mangrove_forest:0 "Mangrove Forest"
+ mangrove_forest_desc:0 ""
  desert:0 "Desert"
  desert_desc:0 ""
+ desert_hills:0 "Desert Hills"
+ desert_hills_desc:0 ""
+ desert_plateau:0 "Desert Plateau"
+ desert_plateau_desc:0 ""
  ice_sheet:0 "Ice Sheet"
  ice_sheet_desc:0 ""
  water_fjords:0 "Fjords and Archipelagos"
