Russian Election Events Localisation

--- a/localisation/english/PB_country_specific/PB_Russia_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Russia_l_english.yml
@@ -420,47 +420,48 @@
   Russian_Politics.28.c:0 "Vvedensky appoints Vernadsky as head of the Council"
 
   Russian_Politics.29.t:0 "The First National Election"
-  Russian_Politics.29.d:0 ""
+  Russian_Politics.29.d:0 "The First Election in Russian History is now occuring and the mood in the streets is exiting. Party-Supporters try to speak bypassers to convince them voting in their party. Speeches across towns and cities are being made everyday where the future statesmen advocate for their political agendas.\n\nWhile polling is hard and generally unpredictable for the first election the newspapers generally expect a tight race between three parties. The Kadets "
   Russian_Politics.29.a:0 "The Kadets win Northern Russia!"
   Russian_Politics.29.b:0 "The Zemtsvoites take a victory!"
   Russian_Politics.29.c:0 "The Nationalists sweep the polls!"
 
   Russian_Politics.30.t:0 "Votes Cast in Central Russia"
-  Russian_Politics.30.d:0 ""
+  Russian_Politics.30.d:0 "Central Russia is likely the key-region for election victory. While the Great Megacity St.Petersburg often dominates the national discourse they often forget that compared to the rest of Russia they live in a bubble.\nIn Central Russia the eye-widening developments of the Capital are only slowly arriving and several people feel left behind by the distand capital and advancements. Especially Moscow, considered by many to be the true capital, is falling behind. Many voters might vote differently because of these conditions."
   Russian_Politics.30.a:0 "The Kadets seize the Polls!"
   Russian_Politics.30.b:0 "The Zemtsvoites win once again!"
   Russian_Politics.30.c:0 "The Nationalists deliver an underdog victory!"
 
   Russian_Politics.31.t:0 "Polls open in Siberia"
-  Russian_Politics.31.d:0 ""
+  Russian_Politics.31.d:0 "Voting and counting in Siberia takes the longest. Unsuspriginly really. While the Siberian Region is one of the future cornerstones of the Empire it is still far away to be on the same pedestal as Central and Northern Russia. Here also lie several military barracks and facilities where its officers have increasingly been more involved in politics. Maybe this region will offer some suprises?"
   Russian_Politics.31.a:0 "The Kadets sweep the Steppes!"
   Russian_Politics.31.b:0 "The Zemtsvoites take the Polls!"
   Russian_Politics.31.c:0 "The Nationalists swing into victory!"
 
   Russian_Politics.33.t:0 "The Autonomous Dumas Vote"
-  Russian_Politics.33.d:0 ""
+  Russian_Politics.33.d:0 "In the last months liberal statesmen have suceeded in increasing the rights of various minorities across the Empire even managing to grant several of them the right to vote.\nWhile the numbers of representatives that can be send from these regions is limited atleast they will be granted an official voice in government politics to voice their concerns."
   Russian_Politics.33.a:0 "Democracy is the right of all citizens!"
 
   Russian_Politics.34.t:0 "The Results of the National Election"
-  Russian_Politics.34.d:0 ""
+  Russian_Politics.34.d:0 "Across the Russian political spectrum the Russian Parties have made their stances clear and managed to mobilize their voters. The first Election of Russia is over and the winner might determine the future of the entire Russian Democratic Experiment."
   Russian_Politics.34.a:0 "And the winner is..."
 
   Russian_Politics.35.t:0 "The First Kadet Government"
-  Russian_Politics.35.d:0 ""
+  Russian_Politics.35.d:0 "The results of the election are clear, the Kadets will form the first elected Cabinet in Russia.\n\nThe Kadets ran on a campaign promising stability and focuses on economic issues. It seems the people were more interested in that message then the radical seen social reforms planned by Zemstvoites or Narodniks. Furthermore the Kadet Party has strong connections to the Emperor. A good relationship to the crown will surely guarentee the continued existence of the Democratic Resurgence.\n\nAlexander Guchkov is expected to be chosen Prime Minister by the King as leader of the Kadet Party. However a inner-party conflict is emerging. Alexander Matveevich Poniatoff a great Industrialist in the area of Electrical-Engineering has been the de-facto leader of the Rights Kadets and has made several suggestion to the Emperor that he should be chosen prime minister. He promises greater industrial benefits for the state in that case."
   Russian_Politics.35.a:0 "Guchkov will form a new government."
   Russian_Politics.35.b:0 "Poniatoff and the Right-Kadets form the next government."
 
-  Russian_Politics.36.t:0 "The First Zemtsvoite Government"
-  Russian_Politics.36.d:0 ""
+  Russian_Politics.36.t:0 "The First Zemstvoite Government"
+  Russian_Politics.36.d:0 "The results of the election are clear, the Zemstvoite will form the first elected Cabinet in Russia.\n\nThe Zemstvoite ran on a campaign promising large social and democratic. It seems the people were more interested in these new ideas then the continued advocations of stability and nationalism by the Kadets or Nationalists. One of their largest goals is to try to restoring the friendship with the Polish, Baltic and Ukrainian people. In their view those groups deserve to be included in the building of a better Russia.\n\nThe Emperor is now forced to chose with leader of the Zemstvoites he will make Prime Minister. The more radical and popular Vasily Maklakov or the more loyal Pavel Milyukov."
+  Russian_Politics.35.a:0 "Guchkov will form a new government."
   Russian_Politics.36.a:0 "Maklakov is appointed Prime Minister."
   Russian_Politics.36.b:0 "Milyukov will be the next Prime Minister."
 
   Russian_Politics.37.t:0 "The First Nationalist Government"
-  Russian_Politics.37.d:0 ""
+  Russian_Politics.37.d:0 "The results of the election are clear, the Nationalists will form the first elected Cabinet in Russia.\n\nThe Nationalists ran on a campaign antgonizing the western powers and promising to restore order in the Eastern Region. Since the Rebellions of 20s the problems of the unruly Polish, Baltic or Ukrainians has never went away and their terror is restarting. The Nationalist Party has promised to end the weak handling of the rebels and End the Terrorism Uprisings in the East.\n\nThe Nationalist Party under Baidalakov has also been very critical about the Alexander Reforms and intends to reverse several ones of them. These reforms caused the degeneration of Russian Society by inviting western-backed powers like the Narodniks or Tchaikovskyites into the open discourse. With high certainty we can expect the Nationalist to try to crush these movements."
   Russian_Politics.37.a:0 "Baidalakov will form a new government."
 
   Russian_Politics.38.t:0 "The Runoff Election"
-  Russian_Politics.38.d:0 ""
+  Russian_Politics.38.d:0 "The race is tighter then expected. Pollsters are still counting the votes as a result can still not be predicted...\nThis has created anger across the political spectrum with critics of the Democracy already bemoaning and pointing out its flaws.\nDespite all of this there will be a winner."
   Russian_Politics.38.a:0 "The results are in..."
 
   Russian_Politics.39.t:0 "The First Narodnik Government"
@@ -1088,8 +1089,8 @@
   PB_RUS_Leftist_Economy:0 "For the Working Class"
   PB_RUS_Leftist_Economy_desc:0 "For decades, the workers of Russia have been exploited and gifted only with empty promises. Those who stayed behind and worked the mills and factories are the true saviours of Russia. And they shall see their hardwork pay off. We shall no longer abuse the workers and we shall no longer reward them with falsehoods. They will see their lives improve, every man and woman shall be finally given what they deserve."
 
-  PB_RUS_Address_the_Duma:0 "Address the Reformists in the Duma"
-  PB_RUS_Address_the_Duma_desc:0 "While not a threat to our nation's future, the Kadet faction within the Duma have become an increasingly loud voice. Calling for reforms and moderate change to build a new future for Russia. This is a voice that has now shown itself to be the right path. For Russia to survive change, even if moderate, must be carried out. The Kadets' ideas will he implemented immediately and stability ensured."
+  PB_RUS_Address_the_Duma:0 "The Duma Begins to Govern"
+  PB_RUS_Address_the_Duma_desc:0 "With the chaos of the last weeks behind us now the elected government of Russia can now finally focus on their original goals. Their ideas shall shape the new Russian State in ways they imagine.\n\nShall Democracy become the Future of Russia or is this concept for the safety of the state to be carefully managed?"
   PB_RUS_Ministry_of_Academics:0 "Establish the Ministry of Academics"
   PB_RUS_Ministry_of_Academics_desc:0 "If we want Russia to advance into the modern era, then we must embrace the rise of technology. Our vast population is filled the potential academics of the future, but they lack the opportunity to use this genius. Not just for the take of Russia, but the entire world. To this end, a new Ministry of Academics will be set up. Its purpose being to ensure steady scientific advancement for our Empire."
   PB_RUS_Curtail_Blackhundredists:0 "Curtail the Blackhundredists"
