--- a/localisation/english/PB_Captured_Cities_Events_l_english.yml
+++ b/localisation/english/PB_Captured_Cities_Events_l_english.yml
@@ -64,16 +64,16 @@ PBCity.12.d:0 "The city of Boston has, after many days of ferocious close quarte
 PBCity.12.a:0 "Any day now they will be begging for mercy."
 
 PBCity.13.t:0 "The Tomb of Charlemagne"
-PBCity.13.d:0 "WIP"
+PBCity.13.d:0 "Now that the French army has taken back the burial grounds in Aachen of the famed Frankish king; Charlemagne, it is time to move him back to his rightful place in France. His tomb will be moved to Versailles where he belongs!"
 PBCity.13.a:0 "Back to his rightful place!"
 
 PBCity.14.t:0 "Recapturing Alsace"
-PBCity.14.d:0 "WIP"
+PBCity.14.d:0 "War with Germany has brought the prized province of Alsace-Lorraine back under our control where it should be! Time to kick out the Germans and install our own government there."
 PBCity.14.a:0 "A defeating blow to the Germans!"
 
 PBCity.15.t:0 "FALL OF AMSTERDAM"
 PBCity.15.d:0 "WIP"
-PBCity.15.a:0 "The Golden Era harbour has fallen!"
+PBCity.15.a:0 "The harbour of the Gouden Eeuw has fallen!"
 PBCity.15.b:0 "The North Sea will be ours!"
 
 PBCity.16.t:0 "FALL OF MUNICH"
@@ -213,3 +213,33 @@ PBCity.38.d:0 "WIP"
 PBCity.38.a:0 "Will the French recover from this?"
 PBCity.38.b:0 "The Pyrenees are close!"
 PBCity.38.c:0 "Our southern flank is falling!"
+
+PBCity.39.t:0 "FALL OF ROME"
+PBCity.39.d:0 "Once again, the Eternal City has found itself sacked by foreign invaders. [2.Controller.GetAdjective] troops entered the city on [GetDateText] following gruesome amounts of bloodshed.\nThough the city is not the administrative capital of Italy, it is certainly the cultural capital, given its storied history and status as the place where western civilization’s foundations were built. The city’s fall marks a major victory for [2.Controller.GetNameDef] "
+PBCity.39.a:0 "476 comes again!"
+PBCity.39.b:0 "The soft underbelly as always!"
+PBCity.39.c:0 "The soft underbelly as always!"
+
+PBCity.40.t:0 "FALL OF MILAN"
+PBCity.40.d:0 "WIP"
+PBCity.40.a:0 "Will the French recover from this?"
+PBCity.40.b:0 "The Pyrenees are close!"
+PBCity.40.c:0 "Our southern flank is falling!"
+
+PBCity.41.t:0 "FALL OF TURIN"
+PBCity.41.d:0 "WIP"
+PBCity.41.a:0 "Will the French recover from this?"
+PBCity.41.b:0 "The Pyrenees are close!"
+PBCity.41.c:0 "Our southern flank is falling!"
+
+PBCity.42.t:0 "FALL OF NAPLES"
+PBCity.42.d:0 "WIP"
+PBCity.42.a:0 "Will the French recover from this?"
+PBCity.42.b:0 "The Pyrenees are close!"
+PBCity.42.c:0 "Our southern flank is falling!"
+
+PBCity.43.t:0 "FALL OF SEVASTOPOL"
+PBCity.43.d:0 "In a repeat of the Crimean War, the defenders of Sevastopol have been forced to abandon the city. [137.Controller.GetAdjective] forces have managed to overrun its garrison, despite the valiant efforts of its defenders and the usage of its costal batteries.\nA major Black Sea naval port boasting impressive coastal defences, an assault on the city was widely considered inevitable in order to secure Ukraine. Despite this major loss [137.Owner.GetNameDef] 's military command have vowed to retake the city. "
+PBCity.43.a:0 "..rode the six hundred..."
+PBCity.43.b:0 "The Pyrenees are close!"
+PBCity.43.c:0 "Our southern flank is falling!"
