wild west+uca provs

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -356,7 +356,7 @@
  STATE_355: "Samsun"
  STATE_356: "Kastamonu"
  STATE_357: "Maine"
- STATE_358: "New York"
+ STATE_358: "Albany"
  STATE_359: "New Jersey"
  STATE_360: "Pennsylvania"
  STATE_361: "Maryland"
