--- a/localisation/english/PB_Imperial_Civil_War_l_english.yml
+++ b/localisation/english/PB_Imperial_Civil_War_l_english.yml
@@ -407,7 +407,7 @@
   PB_Imp_40_Tension_Limit:0 "Imperial Tension is over §R40%§!"
 
 
-  PB_Imp_90_Tension_Limit_Under:0 "Imperial Tension is under §Y90%§!"
+  PB_Imp_90_Tension_Limit_Under:0 "Imperial Tension is under §G90%§!"
   PB_Imp_75_Tension_Limit_Under:0 "Imperial Tension is under §G75%§!"
   PB_Imp_70_Tension_Limit_Under:0 "Imperial Tension is under §G70%§!"
   PB_Imp_50_Tension_Limit_Under:0 "Imperial Tension is under §G50%§!"
