Final checks for Russia

--- a/localisation/english/PB_Government_l_english.yml
+++ b/localisation/english/PB_Government_l_english.yml
@@ -68,6 +68,7 @@ PB_Law_Prev_Policing:0 "Preventative Policing"
 PB_Law_Standard_Policing:0 "Standard Policing"
 PB_Law_Intimidation_Policing:0 "State Intimidation"
 PB_Law_Secret_Police:0 "Secret Police"
+PB_National_Panopticon:0 "National Panopticon"
 
 policies2:0 "Economic Policies"
 
