--- a/localisation/english/PB_country_specific/PB_Russia_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Russia_l_english.yml
@@ -785,7 +785,7 @@
   Russian_Flavour.6.a:0 ""Get it done in four.""
 
   Russian_Flavour.7.t:0 "Snap, Crackle, Pop"
-  Russian_Flavour.7.d:0 "*Pipebursting sound effects* "Oh no!!!""
+  Russian_Flavour.7.d:0 "The Russian government initiated extensive oil prospecting in Russian America, aiming to exploit its untapped reserves.\n\nHowever, one of the newly constructed pipelines burst during testing, causing significant environmental damage and forcing engineers to halt operations. The setback delayed the project and sparked criticism over inadequate safety measures."
   Russian_Flavour.7.a:0 "Well, shit."
 
   Russian_Flavour.8.t:0 "Order Restored"
@@ -856,47 +856,59 @@
   Russian_America.4.t:0 "Operation Chernoye Zoloto"
   Russian_America.4.d:0 ""
   Russian_America.4.a:0 "We will not give up these lands!"
-  Russian_Okhrana.1.t: "Gathering Intel on Polish Resistance"
-  Russian_Okhrana.1.d: " "
-  Russian_Okhrana.1.a: "Use minimal amount of resources"
-  Russian_Okhrana.1.b: "Use resources with caution"
-  Russian_Okhrana.1.c: "Prepare complex operation"
-  Russian_Okhrana.2.t: "Gathering Intel on Ukrainian Resistance"
-  Russian_Okhrana.2.d: " "
-  Russian_Okhrana.2.a: "$Russian_Okhrana.1.a$"
-  Russian_Okhrana.2.b: "$Russian_Okhrana.1.b$"
-  Russian_Okhrana.2.c: "$Russian_Okhrana.1.c$"
-  Russian_Okhrana.3.t: "Gathering Intel on Baltic Resistance"
-  Russian_Okhrana.3.d: " "
-  Russian_Okhrana.3.a: "$Russian_Okhrana.1.a$"
-  Russian_Okhrana.3.b: "$Russian_Okhrana.1.b$"
-  Russian_Okhrana.3.c: "$Russian_Okhrana.1.c$"
-  Russian_Okhrana.4.t: "Gathering Intel on Finnish Resistance"
-  Russian_Okhrana.4.d: " "
-  Russian_Okhrana.4.a: "$Russian_Okhrana.1.a$"
-  Russian_Okhrana.4.b: "$Russian_Okhrana.1.b$"
-  Russian_Okhrana.4.c: "$Russian_Okhrana.1.c$"
+
+  Russian_Okhrana.1.t:0 "Gathering Intel on Polish Resistance"
+  Russian_Okhrana.1.d:0 "We've sent agents to gather intelligence on the Polish rebels. Depending on how many resources we're willing to invest, we will have a greater chance of gaining actionable intel against a resistance leader."
+  Russian_Okhrana.1.a:0 "Use minimal amount of resources"
+  Russian_Okhrana.1.b:0 "Use resources with caution"
+  Russian_Okhrana.1.c:0 "Prepare complex operation"
+
+  Russian_Okhrana.2.t:0 "Gathering Intel on Ukrainian Resistance"
+  Russian_Okhrana.2.d:0 "We've sent agents to gather intelligence on the Ukrainian rebels. Depending on how many resources we're willing to invest, we will have a greater chance of gaining actionable intel against a resistance leader."
+  Russian_Okhrana.2.a:0 "$Russian_Okhrana.1.a$"
+  Russian_Okhrana.2.b:0 "$Russian_Okhrana.1.b$"
+  Russian_Okhrana.2.c:0 "$Russian_Okhrana.1.c$"
+
+  Russian_Okhrana.3.t:0 "Gathering Intel on Baltic Resistance"
+  Russian_Okhrana.3.d:0 "We've sent agents to gather intelligence on the Baltic rebels. Depending on how many resources we're willing to invest, we will have a greater chance of gaining actionable intel against a resistance leader."
+  Russian_Okhrana.3.a:0 "$Russian_Okhrana.1.a$"
+  Russian_Okhrana.3.b:0 "$Russian_Okhrana.1.b$"
+  Russian_Okhrana.3.c:0 "$Russian_Okhrana.1.c$"
+
+  Russian_Okhrana.4.t:0 "Gathering Intel on Finnish Resistance"
+  Russian_Okhrana.4.d:0 "We've sent agents to gather intelligence on the Finnish rebels. Depending on how many resources we're willing to invest, we will have a greater chance of gaining actionable intel against a resistance leader."
+  Russian_Okhrana.4.a:0 "$Russian_Okhrana.1.a$"
+  Russian_Okhrana.4.b:0 "$Russian_Okhrana.1.b$"
+  Russian_Okhrana.4.c:0 "$Russian_Okhrana.1.c$"
 
   Russian_Commonality.1.t:0 "The Commonality Comes Online"
-  Russian_Commonality.1.d:0 ""
+  Russian_Commonality.1.d:0 "We've begun the activation sequence for the Commonality Consensus, a nationwide neural network designed to unify the thoughts and knowledge of its citizens. Over the past few months, they have distributed neural implants to a majority of the population, ensuring widespread integration into the system. Officials have expressed confidence that the Consensus will revolutionize governance, streamline decision-making, and foster unprecedented societal cooperation. Early tests conducted in controlled environments have demonstrated its potential to harmonize conflicting perspectives and accelerate problem-solving on a massive scale.\n\nAs the activation process has unfolded, anticipation across the nation has grown. Citizens have been told to expect a new era of progress and efficiency, with promises of enhanced communication and shared understanding. At the same time, concerns about privacy and individuality have persisted among skeptics, who have warned of potential abuses of the system’s vast capabilities. The government has assured the public that safeguards and ethical oversight have been implemented, though many await the system’s full activation with a mix of hope and apprehension."
   Russian_Commonality.1.a:0 "Let's hope this works."
 
   Russian_Commonality.2.t:0 "The Commonality Activation Sequence Completes"
-  Russian_Commonality.2.d:0 ""
+  Russian_Commonality.2.d:0 "The Russian government has successfully brought the Commonality Consensus online after distributing neural implants to the majority of its citizens. Having learned from the catastrophic failures of the project in Area Zero, they have implemented rigorous safeguards and psychological protocols to ensure the system operates smoothly. These measures have included mandatory mental health evaluations, limits on memory-sharing, and advanced encryption to prevent unauthorized access to individuals’ thoughts. Initial reports have celebrated the project as a groundbreaking success, with citizens experiencing heightened collective efficiency in governance, education, and public safety.\n\nAs the Consensus has expanded, the nation has begun to see a transformation in its societal structure. Decision-making processes at every level have become almost instantaneous, as citizens have contributed their expertise and insights directly through the network. This collective intelligence has allowed for rapid problem-solving and unprecedented unity, with dissent minimized by the platform’s capacity to harmonize conflicting perspectives. The system has even managed to boost the economy, as industries have optimized their production lines and logistics using shared knowledge from across the nation."
   Russian_Commonality.2.a:0 "Subconscious is finally achieved."
 
   Russian_Commonality.3.t:0 "Luddite Rebels Attack Industrial Zone"
-  Russian_Commonality.3.d:0 ""
+  Russian_Commonality.3.d:0 "Luddite rebels have launched a series of coordinated terrorist attacks against key Russian government facilities in retaliation for the implementation of the Commonality Consensus project. These attacks have targeted neural implant distribution centers, government communication hubs, and research facilities linked to the Consensus, resulting in significant damage and loss of life. The rebels have claimed responsibility through anonymous manifestos, condemning the project as a violation of human autonomy and a tool of authoritarian control. Their actions have disrupted the rollout of the Consensus in several regions, forcing the government to divert resources to counter-insurgency efforts.\n\nIn response, Russian authorities have increased security measures and declared a state of emergency in areas most affected by the attacks. Public sentiment has been divided, with some citizens sympathizing with the rebels’ concerns about privacy and individuality, while others view the attacks as dangerous and unjustified. The government has emphasized its commitment to the Consensus project, portraying the rebels as extremists opposed to progress. However, the escalation of violence has highlighted the growing rift between those embracing technological integration and those resisting it, raising questions about the long-term stability of the nation."
   Russian_Commonality.3.a:0 "Crack down on them!"
 
   Russian_Commonality.4.t:0 "Luddite Rebels Attack Arms Factory"
-  Russian_Commonality.4.d:0 ""
+  Russian_Commonality.4.d:0 "Luddite rebels have launched a series of coordinated terrorist attacks against key Russian government facilities in retaliation for the implementation of the Commonality Consensus project. These attacks have targeted neural implant distribution centers, government communication hubs, and research facilities linked to the Consensus, resulting in significant damage and loss of life. The rebels have claimed responsibility through anonymous manifestos, condemning the project as a violation of human autonomy and a tool of authoritarian control. Their actions have disrupted the rollout of the Consensus in several regions, forcing the government to divert resources to counter-insurgency efforts.\n\nIn response, Russian authorities have increased security measures and declared a state of emergency in areas most affected by the attacks. Public sentiment has been divided, with some citizens sympathizing with the rebels’ concerns about privacy and individuality, while others view the attacks as dangerous and unjustified. The government has emphasized its commitment to the Consensus project, portraying the rebels as extremists opposed to progress. However, the escalation of violence has highlighted the growing rift between those embracing technological integration and those resisting it, raising questions about the long-term stability of the nation."
   Russian_Commonality.4.a:0 "Crack down on them!"
 
   Russian_Commonality.5.t:0 "Luddite Rebels Attack Infrastructure"
-  Russian_Commonality.5.d:0 ""
+  Russian_Commonality.5.d:0 "Luddite rebels have launched a series of coordinated terrorist attacks against key Russian government facilities in retaliation for the implementation of the Commonality Consensus project. These attacks have targeted neural implant distribution centers, government communication hubs, and research facilities linked to the Consensus, resulting in significant damage and loss of life. The rebels have claimed responsibility through anonymous manifestos, condemning the project as a violation of human autonomy and a tool of authoritarian control. Their actions have disrupted the rollout of the Consensus in several regions, forcing the government to divert resources to counter-insurgency efforts.\n\nIn response, Russian authorities have increased security measures and declared a state of emergency in areas most affected by the attacks. Public sentiment has been divided, with some citizens sympathizing with the rebels’ concerns about privacy and individuality, while others view the attacks as dangerous and unjustified. The government has emphasized its commitment to the Consensus project, portraying the rebels as extremists opposed to progress. However, the escalation of violence has highlighted the growing rift between those embracing technological integration and those resisting it, raising questions about the long-term stability of the nation."
   Russian_Commonality.5.a:0 "Crack down on them!"
 
+  Russian_Panopticon.1.t:0 "The Panopticon Stirs"
+  Russian_Panopticon.1.d:0 "We've has begun the activation sequence for the National Panopticon, a modified and highly centralized version of the Commonality Consensus developed under the authority of the ruling military junta. This system has been designed to grant the junta unprecedented control over the thoughts and behaviors of the population, effectively merging individual consciousnesses into a monitored and regulated network. Official statements have framed the Panopticon as a necessary measure to ensure national security and social stability, though concerns about its ethical implications have persisted.\n\nAs the activation sequence has progressed, reports have emerged of mandatory neural implant upgrades in major cities, with citizens compelled to participate under threat of severe penalties. The Panopticon’s architects have claimed that the system will eliminate dissent and streamline governance, but critics have described it as a dystopian nightmare that erases personal autonomy. The project’s implementation has marked a chilling milestone in the junta’s consolidation of power, leaving the nation poised on the edge of a new and deeply uncertain era."
+  Russian_Panopticon.1.a:0 "Permanent stability, soon."
+
+  Russian_Panopticon.2.t:0 "The Panopticon Rises"
+  Russian_Panopticon.2.d:0 "The National Panopticon has come online, successfully interfacing with the neural implants of millions across Russia. With its activation, the system has achieved the military junta’s vision of unprecedented control, monitoring and manipulating the thoughts of citizens in real time. Traitorous or subversive ideas have been identified and expunged on a neurological level, erasing dissent before it can manifest into action.\n\nThis technological milestone has solidified Russia as a permanent totalitarian state, where individual autonomy no longer exists, and loyalty to the regime has become a matter of enforced thought. The Panopticon has been heralded by its architects as the pinnacle of social order, while the few who dare to criticize it have either vanished or fallen silent, their thoughts reshaped by the very system they fear.\n\nThe nation now marches under an unyielding regime of absolute mental control."
+  Russian_Panopticon.2.a:0 "Stability, Peace, Now and Forever."
+  
 
   ##########################
   # GUI DESCRIPTIONS
@@ -1726,7 +1738,7 @@
   RUS_commonality_phase_3_text: "§5Commonality Consensus§! is in the §YThird Phase§!, currently awaiting for the §YCommonality Activation§!"
 
   PB_RUS_National_Panopticon_Project:0 "The National Panopticon"
-  PB_RUS_National_Panopticon_Project_desc:0 "\n\n\n\n\n\n        Grestin pls add some nice text here adn picture above  .\n\n[RUS_get_panopticon_text]"
+  PB_RUS_National_Panopticon_Project_desc:0 "\n\n\n\n\n\nRepresenting the natural end stage of democracy, the Commonality Consensus is the brainchild of Zofia Tesla. A radical proposal, the Consensus would use modified Tesla towers and neural implants to allow the government to operate on a unconscious national consensus. Of course, this is all well and good, but the regime has far more pragmatic plans for the Commonality. Nicknamed the National Panopticon, the new system will give us a direct line to the minds of the entire country. Any traitorous thoughts will be eradicated, and the new regime will be secured. Forever.\n\nTo bring the system online, we must construct §YTesla towers§! in major population centers. Once this phase is complete, we can begin distributing the neural implants across the country. Once both phases are complete, the National Panopticon can be brought online and begin churning data for the government.\n\n[RUS_get_panopticon_text]"
   PB_RUS_Panopticon_Surveillance_Moscow:0 "Activate the Moscow Surveillance System"
   PB_RUS_Panopticon_Surveillance_Moscow_desc:0 "Construct a Tesla Tower in the highlighted state via the Construction Menu. You may need to sacrifice other buildings to make slots available, or use slots allotted via focuses."
   PB_RUS_Panopticon_Surveillance_Petersburg:0 "Activate the Surveillance System"
