special thanks updated

--- a/localisation/english/PB_Countries_Topbar_l_english.yml
+++ b/localisation/english/PB_Countries_Topbar_l_english.yml
@@ -14,4 +14,4 @@
 
   close_tooltip:0 ""
 
-  PB_special_thanks: "§YSpecial thanks to§!:\nBernie, Stallone, Lofn, Two-Watt, Wolfxe, Nilo, Mimi, Globus, Alfred/Fausi, BoringIndividual, Jubs, Tapir, Weis, Erwin, Jackie, Beezlebub, Zerogamer, SilentKing, Soble, Red, and Arj."
+  PB_special_thanks: "§YSpecial thanks to§!:\nBernie, Stallone, Lofn, Two-Watt, Wolfxe, Nilo, Mimi, Globus, Alfred/Fausi, BoringIndividual, Jubs, Tapir, Weis, Erwin, Jackie, Beezlebub, Zerogamer, SilentKing, Soble, Red, Sprinkles, LeXus, Punkradio, Faust, GrievingOhio, Nohan, Visegradi, and Mike123"
