bug-reporting fixes

--- a/localisation/english/PB_Game_Rules_l_english.yml
+++ b/localisation/english/PB_Game_Rules_l_english.yml
@@ -49,11 +49,11 @@
   RULE_OPTION_FRA_ARMAND_PATH_DESC:0 "Armand will create a National Workers Republic."
 
   RULE_OPTION_GER_ELIZABETH_PATH:0 "The Red Diachy"
-  RULE_OPTION_GER_ELIZABETH_PATH_desc:0 "Germany will begin its transition into a socialist paradise."
+  RULE_OPTION_GER_ELIZABETH_PATH_DESC:0 "Germany will begin its transition into a socialist paradise."
   RULE_OPTION_GER_LIBERAL_PATH:0 "The Liberal Leap Forward"
-  RULE_OPTION_GER_LIBERAL_PATH_desc:0 "Germany will be the heartland of European liberlism."
+  RULE_OPTION_GER_LIBERAL_PATH_DESC:0 "Germany will be the heartland of European liberlism."
   RULE_OPTION_GER_REVANCHIST_PATH:0 "A Revanchist Germany"
-  RULE_OPTION_GER_REVANCHIST_PATH_desc:0 "Germany will pursue a revanchist policy in Europe."
+  RULE_OPTION_GER_REVANCHIST_PATH_DESC:0 "Germany will pursue a revanchist policy in Europe."
 
   RULE_OPTION_SCA_DOESNT_FORM:0 "The Art of the Deal"
   RULE_OPTION_SCA_DOESNT_FORM_DESC:0 "Coolidge negotiates with the Bonus Brigade and the Second Continental Army does not form."
@@ -91,10 +91,10 @@
   RULE_OPTION_FRANCO_RUSSIAN_ALLIANCE_DESC:0 "France will reject none of Russia's demands at the Prague Conference, leading a preservation of the Pacte Revanchiste and the warming of Franco-Russian relations."
   
   # I'll add (better) descs once the content is fully complete and polished
-  RULE_OPTION_PRS_NEOIMP_PATH:0 "WIP Neo-Imp Prussia"
-  RULE_OPTION_PRS_NEOIMP_PATH_DESC:0 "WIP Neo-Imp Prussia"
-  RULE_OPTION_PRS_ANLIB_PATH:0 "WIP An-Lib Prussia"
-  RULE_OPTION_PRS_ANLIB_PATH_DESC:0 "WIP An-Lib Prussia"
+  RULE_OPTION_PRS_NEOIMP_PATH:0 "Neo-Imp Prussia"
+  RULE_OPTION_PRS_NEOIMP_PATH_DESC:0 "Bouhler stays in Power"
+  RULE_OPTION_PRS_ANLIB_PATH:0 "An-Lib Prussia"
+  RULE_OPTION_PRS_ANLIB_PATH_DESC:0 "The Junkers overthrow Bouhler"
   RULE_OPTION_RUS_COSMISTS_PATH:0 "To Infinity and Beyond"
   RULE_OPTION_RUS_COSMISTS_PATH_DESC:0 "Olga will become Tsarina and the Cosmist faction of Russia will be empowered." 
   RULE_OPTION_RUS_MOSCOW_CIRCLE_PATH:0 "Russia's Darkest Night"
